added plugs, got ng_cordera working with InAppBrowser. Removed ios Build folder

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <script src="lib/auth0-angular/build/auth0-angular.js"></script>
     <script src="lib/a0-angular-storage/dist/angular-storage.js"></script>
     <script src="lib/angular-jwt/dist/angular-jwt.js"></script>
-
+    <script src="js/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
