--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src='js/angular-cookie/angular-cookie.js'></script>
+    <script src='js/angular-pageslide-directive.js'></script>
   </head>
   <body ng-app="starter">
     <!--
