--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -31,7 +31,7 @@
     <script src='js/angular-cookie/angular-cookie.js'></script>
     <script src='js/angular-pageslide-directive.js'></script>
   </head>
-  <body ng-app="starter" class="platform-ios platform-cordova platform-webview">
+  <body ng-app="starter">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
